2006-03-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_diameter) : from, to, path
	arguments added
	* examples/simple/igraph_diameter.c : updated

	* src/structural_properties.c (igraph_get_shortest_paths) : 
	to argument added
	* examples/simple/igraph_get_shortest_paths.c : added

2006-03-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/measure_dynamics.c (igraph_measure_dynamics_idage)
	(igraph_measure_dynamics_idage_debug, igraph_i_tuppercrit): error 
	estimation added

2006-03-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/error.h (igraph_warning_handler_t, IGRAPH_WARNING) : added
	* src/error.c (igraph_i_warning_handler, igraph_warning_handler_print)
	(igraph_warning, igraph_set_warning_handler) : added
	* src/foreign.c (igraph_read_graph_ncol) : added two warnings

2006-03-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/python/graphobject.c (igraphmodule_Graph_Read_Ncol) :
	dummy update for predef argument
	
	* src/foreign.c (igraph_read_graph_ncol) : added predef argument

2006-03-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_fruchterman_reingold)
	(igraph_layout_fruchterman_reingold_3d, igraph_layout_kamada_kawai)
	(igraph_layout_kamada_kawai_3d, igraph_layout_merge_dla)
	(igraph_layout_grid_fruchterman_reingold) : progress handling
	updated or added

	* src/matrix.c (igraph_matrix_select_rows) : added
	* src/vector.c (igraph_vector_append) : added
	* src/other.c (igraph_convex_hull) : changed parameters
	* examples/simple/igraph_convex_hull.c : updated
	* interfaces/python/igraphmodule.c (igraphmodule_convex_hull): updated
	for new igraph_convex_hull syntax, returns a matrix if coords is true
	* interfaces/python/test.py : updated

	* src/structural_properties.c (igraph_get_all_shortest_paths) :
	bug hunted

2006-02-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_merge_dla) : add graph list parameter

	* src/layout.c (igraph_layout_merge_dla) : updated
