@@ -1,5 +1,11 @@
 2006-03-12  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/structural.properties.R 
+	(farthest.points, farthest.nodes) : former renamed to latter
+	(get.all.shortest.paths) : to argument handled natively
+	* interfaces/R/src/rinterface.c (R_igraph_get_all_shortest_paths) :
+	updated, to argument added
+	
 	* interfaces/R/igraph/R/structural.properties.R (get.diameter) : added
 	(farthest.points) : added
 	(get.all.shortest.paths) : to argument added
