@@ -1,5 +1,8 @@
 2006-03-12  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* src/structural_properties.c (igraph_get_all_shortest_paths) :
+	to argument added
+
 	* src/structural_properties.c (igraph_diameter) : from, to, path
 	arguments added
 	* examples/simple/igraph_diameter.c : updated
